--- a/sub1/FPGADevice_envsettings.html
+++ b/sub1/FPGADevice_envsettings.html
@@ -18,49 +18,56 @@
 <td>D:\Xilinx\14.6\ISE_DS\ISE\\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\..\..\..\DocNav;<br>D:\Xilinx\14.6\ISE_DS\PlanAhead\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\EDK\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnuwin\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\arm\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>D:\Xilinx\14.6\ISE_DS\common\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\WINDOWS\system32;<br>C:\WINDOWS;<br>C:\WINDOWS\System32\Wbem;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft\Web Platform Installer\;<br>C:\Program Files (x86)\Microsoft ASP.NET\ASP.NET Web Pages\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.0\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Windows Live\Shared;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\pcb\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\fet\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\OpenAccess\bin\win32\opt;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\Capture;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\PSpice</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE\\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\..\..\..\DocNav;<br>D:\Xilinx\14.6\ISE_DS\PlanAhead\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\EDK\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnuwin\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\arm\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>D:\Xilinx\14.6\ISE_DS\common\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\WINDOWS\system32;<br>C:\WINDOWS;<br>C:\WINDOWS\System32\Wbem;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft\Web Platform Installer\;<br>C:\Program Files (x86)\Microsoft ASP.NET\ASP.NET Web Pages\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.0\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Windows Live\Shared;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\pcb\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\fet\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\OpenAccess\bin\win32\opt;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\Capture;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\PSpice</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE\\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\ISE\..\..\..\DocNav;<br>D:\Xilinx\14.6\ISE_DS\PlanAhead\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\EDK\lib\nt64;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnuwin\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\arm\nt\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>D:\Xilinx\14.6\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>D:\Xilinx\14.6\ISE_DS\common\bin\nt64;<br>D:\Xilinx\14.6\ISE_DS\common\lib\nt64;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\WINDOWS\system32;<br>C:\WINDOWS;<br>C:\WINDOWS\System32\Wbem;<br>C:\WINDOWS\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files\Microsoft\Web Platform Installer\;<br>C:\Program Files (x86)\Microsoft ASP.NET\ASP.NET Web Pages\v1.0\;<br>C:\Program Files (x86)\Windows Kits\8.0\Windows Performance Toolkit\;<br>C:\Program Files\Microsoft SQL Server\110\Tools\Binn\;<br>C:\Program Files (x86)\Windows Live\Shared;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\pcb\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\fet\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\OpenAccess\bin\win32\opt;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\bin;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\Capture;<br>D:\OrCAD\OrCAD_16.6_Lite\tools\PSpice</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp; not set &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>PATHEXT</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
 <td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
+</tr>
+<tr>
+<td>Path</td>
+<td> &lt;&nbsp; not set &nbsp;&gt; </td>
+<td> &lt;&nbsp; not set &nbsp;&gt; </td>
+<td> &lt;&nbsp; not set &nbsp;&gt; </td>
+<td><font color=gray>C:\Xilinx\13.1\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\13.1\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\13.1\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\13.1\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\13.1\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\13.1\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\13.1\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\13.1\ISE_DS\EDK\gnu\microblaze\nt64\bin;<br>C:\Xilinx\13.1\ISE_DS\EDK\gnu\powerpc-eabi\nt64\bin;<br>C:\Xilinx\13.1\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\13.1\ISE_DS\common\bin\nt64;<br>C:\Xilinx\13.1\ISE_DS\common\lib\nt64;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Program Files (x86)\ATI Technologies\ATI.ACE\Core-Static;<br>C:\Program Files\Intel\DMIX;<br>c:\Program Files (x86)\Microsoft SQL Server\100\Tools\Binn\;<br>c:\Program Files\Microsoft SQL Server\100\Tools\Binn\;<br>c:\Program Files\Microsoft SQL Server\100\DTS\Binn\;<br>C:\Program Files\MATLAB\R2011b\runtime\win64;<br>C:\Program Files\MATLAB\R2011b\bin;<br>C:\Program Files (x86)\Microchip\MPLAB C32 Suite\bin;<br>C:\Program Files (x86)\Microchip\MPLAB IDE\VDI;<br>C:\Program Files (x86)\HI-TECH Software\PICC\9.70\bin</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE\</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE\</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE\</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>C:\Xilinx\13.1\ISE_DS\ISE\</font></td>
 </tr>
 <tr>
 <td>XILINXD_LICENSE_FILE</td>
 <td>D:\Xilinx\Xilinx.lic</td>
 <td>D:\Xilinx\Xilinx.lic</td>
 <td>D:\Xilinx\Xilinx.lic</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>C:\Users\andy.ng\Downloads\Xilinx.lic</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE</td>
 <td>D:\Xilinx\14.6\ISE_DS\ISE</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>C:\Xilinx\13.1\ISE_DS\ISE</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
 <td>D:\Xilinx\14.6\ISE_DS\EDK</td>
 <td>D:\Xilinx\14.6\ISE_DS\EDK</td>
 <td>D:\Xilinx\14.6\ISE_DS\EDK</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>C:\Xilinx\13.1\ISE_DS\EDK</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
 <td>D:\Xilinx\14.6\ISE_DS\PlanAhead</td>
 <td>D:\Xilinx\14.6\ISE_DS\PlanAhead</td>
 <td>D:\Xilinx\14.6\ISE_DS\PlanAhead</td>
-<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>C:\Xilinx\13.1\ISE_DS\PlanAhead</font></td>
 </tr>
 </TABLE>
 <A NAME="Synthesis Property Settings"></A>
@@ -429,6 +436,42 @@
 <td>None</td>
 </tr>
 </TABLE>
+<A NAME="Place and Route Property Settings"></A>
+&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
+<TR ALIGN=CENTER BGCOLOR='#99CCFF'>
+<TD ALIGN=CENTER COLSPAN='4'><B>Place and Route Property Settings </B></TD>
+</tr>
+<tr bgcolor='#ffff99'>
+<td><b>Switch Name</b></td>
+<td><b>Property Name</b></td>
+<td><b>Value</b></td>
+<td><b>Default Value</b></td>
+</tr>
+<tr>
+<td><font color=gray>-t</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>1</font></td>
+<td><font color=gray>1</font></td>
+</tr>
+<tr>
+<td><font color=gray>-intstyle</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>ise</font></td>
+<td><font color=gray>&nbsp;</font></td>
+</tr>
+<tr>
+<td><font color=gray>-ol</font></td>
+<td><font color=gray>Place & Route Effort Level (Overall)</font></td>
+<td><font color=gray>high</font></td>
+<td><font color=gray>std</font></td>
+</tr>
+<tr>
+<td><font color=gray>-w</font></td>
+<td><font color=gray>&nbsp;</font></td>
+<td><font color=gray>true</font></td>
+<td><font color=gray>false</font></td>
+</tr>
+</TABLE>
 <A NAME="Operating System Information"></A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
@@ -446,28 +489,28 @@
 <td>Intel(R) Core(TM) i5-2500K CPU @ 3.30GHz/3300 MHz</td>
 <td>Intel(R) Core(TM) i5-2500K CPU @ 3.30GHz/3300 MHz</td>
 <td>Intel(R) Core(TM) i5-2500K CPU @ 3.30GHz/3300 MHz</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>Intel(R) Core(TM) i7-2600 CPU @ 3.40GHz/3392 MHz</font></td>
 </tr>
 <tr>
 <td>Host</td>
 <td>Andromeda</td>
 <td>Andromeda</td>
 <td>Andromeda</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>H451_1</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
 <td>Microsoft , 64-bit</td>
 <td>Microsoft , 64-bit</td>
 <td>Microsoft , 64-bit</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>Microsoft Windows 7 , 64-bit</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
 <td>major release  (build 9200)</td>
 <td>major release  (build 9200)</td>
 <td>major release  (build 9200)</td>
-<td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
+<td><font color=gray>Service Pack 1  (build 7601)</font></td>
 </tr>
 </TABLE>
 </BODY> </HTML>
