added some code for stalling

--- a/sub1/FPGADevice_summary.html
+++ b/sub1/FPGADevice_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>FPGADevice Project Status (03/03/2014 - 21:27:09)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>FPGADevice Project Status (12/03/2013 - 14:26:40)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>sub1.xise</TD>
@@ -191,14 +191,14 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Mar 3 20:38:06 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\FPGADevice_map.map'>Map Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Mar 3 21:26:42 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\FPGADevice_pad.txt'>Pad Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Mar 3 21:26:55 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\FPGADevice.unroutes'>Unroutes Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Mar 3 21:26:55 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Mar 3 21:27:02 2014</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Mar 3 21:27:09 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Tue Mar 4 01:15:35 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\FPGADevice_map.map'>Map Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 3 21:26:42 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\FPGADevice_pad.txt'>Pad Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 3 21:26:55 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\FPGADevice.unroutes'>Unroutes Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 3 21:26:55 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 3 21:27:02 2014</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='D:/Dropbox/Codespace/PMIPS/sub1\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Mar 3 21:27:09 2014</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 03/03/2014 - 21:29:15</center>
+<br><center><b>Date Generated:</b> 03/04/2014 - 09:52:27</center>
 </BODY></HTML>
